// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`列表渲染测试 嵌套列表 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <ul
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        foo
        <ul
          class="auto-hide-last-sibling-br"
        >
          

          <li>
            bar
            <ul
              class="auto-hide-last-sibling-br"
            >
              

              <li>
                <div
                  class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
                >
                  baz
                </div>
                <br
                  class="container wrapper non-select"
                />
                

                <div
                  class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
                >
                  bim
                </div>
                <br
                  class="container wrapper non-select"
                />
                

              </li>
              

            </ul>
            <br
              class="container wrapper non-select"
            />
            

          </li>
          

        </ul>
        <br
          class="container wrapper non-select"
        />
        

      </li>
      

    </ul>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`列表渲染测试 无序列表“*” 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <ul
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        foo
      </li>
      

      <li>
        bar
      </li>
      

    </ul>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`列表渲染测试 无序列表“+” 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <ul
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        foo
      </li>
      

      <li>
        bar
      </li>
      

    </ul>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`列表渲染测试 无序列表“-” 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <ul
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        foo
      </li>
      

      <li>
        bar
      </li>
      

    </ul>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`列表渲染测试 有序列表“)” 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <ol
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        foo
      </li>
      

      <li>
        bar
      </li>
      

    </ol>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`列表渲染测试 有序列表“.” 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <ol
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        foo
      </li>
      

      <li>
        bar
      </li>
      

    </ol>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`列表渲染测试 空列表 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <ul
      class="auto-hide-last-sibling-br"
    >
      

      <li />
      

    </ul>
    <br
      class="container wrapper non-select"
    />
    

    <ol
      class="auto-hide-last-sibling-br"
    >
      

      <li />
      

    </ol>
    <br
      class="container wrapper non-select"
    />
    

    <ul
      class="auto-hide-last-sibling-br"
    >
      

      <li />
      

    </ul>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`列表渲染测试 类型不同时另起新列表 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <ul
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        foo
      </li>
      

      <li>
        bar
      </li>
      

    </ul>
    <br
      class="container wrapper non-select"
    />
    



    <ul
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        baz
      </li>
      

    </ul>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`列表项渲染测试 列表项统一缩进 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <ol
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        <div
          class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
        >
          A paragraph
          <br
            class="container wrapper non-select"
          />
          with two lines.
        </div>
        <br
          class="container wrapper non-select"
        />
        

        <div
          class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
        >
          indented code
        </div>
        <br
          class="container wrapper non-select"
        />
        

        <blockquote
          class="auto-hide-last-sibling-br"
        >
          

          <div
            class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
          >
            A block quote.
          </div>
          <br
            class="container wrapper non-select"
          />
          

        </blockquote>
        <br
          class="container wrapper non-select"
        />
        

      </li>
      

    </ol>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`列表项渲染测试 列表项缩进不满足时排除到外边，变为原本内容 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <ul
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        one
      </li>
      

    </ul>
    <br
      class="container wrapper non-select"
    />
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      two
    </div>
    <br
      class="container wrapper non-select"
    />
    

    <ul
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        one
      </li>
      

    </ul>
    <br
      class="container wrapper non-select"
    />
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      two
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;
